--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity
             android:name=".general"
             android:label="@string/General"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             />
         <activity
             android:name=".earlyscience"
@@ -72,7 +73,8 @@
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
             android:exported="true"
             />
-        //Delete the exported line before submitting
+
+        // TODO: before submitting, remove exported lines
 
 
         <activity
@@ -90,7 +92,7 @@
 
         <activity
             android:name=".ppNavigtation"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
     </application>
 
 </manifest>
