--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
@@ -26,6 +27,7 @@
         <activity android:name=".socialmedia"
             android:exported="true"
             android:label = "@string/SocialMedia"
+            android:alwaysRetainTaskState="true"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
 
 
@@ -92,7 +94,12 @@
 
         <activity
             android:name=".ppNavigtation"
+            android:alwaysRetainTaskState="true"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+
+
     </application>
 
+
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
