Fixed issue where navigation view had a black background. Has been changed to white

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,7 +95,7 @@
         <activity
             android:name=".ppNavigtation"
             android:alwaysRetainTaskState="true"
-            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light"></activity>
 
 
     </application>
