--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
         <activity
             android:name=".MyActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,51 +28,51 @@
             android:exported="true"
             android:label = "@string/SocialMedia"
             android:alwaysRetainTaskState="true"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/Theme.AppCompat.Light" />
 
 
         <activity
             android:name=".general"
             android:label="@string/General"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:theme="@style/Theme.AppCompat.Light"
             />
         <activity
             android:name=".earlyscience"
             android:label="@string/title_earlyScience"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".harrypotter"
             android:label="@string/title_harrypotter"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".santalanding"
             android:label="@string/title_santalanding"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".beer"
             android:label="@string/title_beer"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".enchantedforest"
             android:label="@string/title_enchantedforest"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".cultural"
             android:label="@string/title_cultural"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".future"
             android:label="@string/title_future"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".natural"
             android:label="@string/title_natural"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/Theme.AppCompat.Light" />
 
         <activity
             android:name=".events"
             android:label="@string/Events"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+            android:theme="@style/Theme.AppCompat.Light"
             android:exported="true"
             />
 
@@ -81,21 +81,21 @@
 
         <activity
             android:name=".pinkpalace"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
 
 
 
         <activity
             android:name=".exhibits"
             android:label="@string/Exhibits"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/Theme.AppCompat.Light" />
 
 
 
         <activity
             android:name=".ppNavigtation"
             android:alwaysRetainTaskState="true"
-            android:theme="@style/Theme.AppCompat.Light"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
 
 
     </application>
